--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="navbar bg-base-100 shadow-sm rounded-md">
             <div class="flex-1">
               <a class="btn btn-ghost text-xl font-normal"
-                ><img src="/assets/logo.png" alt="logo" />Dev<span
+                ><img src="assets/logo.png" alt="logo" />Dev<span
                   class="font-bold"
                   >Board</span
                 ></a
