FAQ page designed

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <!---------------------->
             <!-- Card 2 -->
             <div
+              onclick="location.href='faq.html'"
               class="w-6/12 bg-linear-to-r from-[#3752FD] to-[#9BA8F8] my-6 rounded-md flex items-center justify-center px-12"
             >
               <img src="assets/board.png" alt="board" />
